--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,21 @@
 .container-flex1{
     display: flex;
     justify-content: center;
-    justify-content: space-between;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
+    align-items: center;
 }
 
-.container1{
+
+.container{
     background-color: #add8e6;
-    width: 100%;
+    width: 80%;
+    max-width: 1000px;
     display: flex;
     justify-content: center;
 }
 
-.container2{
+/* .container2{
     background-color: goldenrod;
     display: flex;
     justify-content: center;
@@ -28,18 +32,36 @@
     margin-bottom: 10px;
     align-items: center;
     border: dashed
-}
+} */
 
-.container3{
+.container-link{
     border-left: dashed;
     border-right: dashed;
     padding-left: 20%;
     padding-right: 20%;
+    display: flex;
+    align-items: center;
+}
+
+.container-link ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    justify-content: space-between;
+}
+
+li{
+    margin: 0 10px
+}
+
+a{
+    color: white;
+    text-decoration: none;
 }
 
 /* MAIN */
 .box-background1{
-    background-color: #00008b;
+    /* background-color: #00008b; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,17 +87,16 @@
 
 .box2{
     background-color: #1e90ff;
-    margin-top: 10px;
-    margin-bottom: 10px;
+
     height: 400px;
-    width: 30%;
+    width: 70%;
     border: 2px dashed;
 }
 
 .box2-2{
     background-color: #ffc0cb;
     height: 400px;
-    width: 20%;
+    width: 30%;
     border: 2px dashed;
 }
 
