--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@
 }
 /* HEADER */
 .container-flex1{
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     background-image: url(../img/jumbo.png);
     background-size: cover;
     align-items: center;
+    font-family: 'Whitney', sans-serif;
 }
 
 
@@ -18,6 +19,7 @@
     background-color: #add8e6;
     width: 80%;
     max-width: 1000px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
 }
@@ -59,6 +61,50 @@ a{
     text-decoration: none;
 }
 
+header h1{
+    text-align: center;
+    color: white;
+    font-size: 2em;
+    font-family: 'Whitney', sans-serif;
+}
+
+header p{
+    color: white;
+    text-align: center;
+    font-family: 'Whitney', sans-serif;
+    font-size: 1.5em;
+    padding-top: 20px;
+}
+
+#button1{
+    background-color: white;
+    color: black;
+    padding: 15px 20px;
+    border-radius: 40px;
+    border: none;   
+    font-family: 'Whitney', sans-serif;
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-right: 20px;
+    text-align: center;
+}
+
+#button2{
+    background-color: black;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 40px;
+    border: none;   
+    font-family: 'Whitney', sans-serif;
+    font-size: 1.5em;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.button-container{
+    text-align: center;
+}
+
 /* MAIN */
 .box-background1{
     /* background-color: #00008b; */
@@ -70,10 +116,10 @@ a{
 }
 
 .box1{
-    background-color: #ee82ee;
+    /* background-color: #ee82ee; */
     border: 2px dashed;
     height: 320px;
-    width: 35%;
+    width: 50%;
 }
 
 .box-background2{
@@ -94,10 +140,14 @@ a{
 }
 
 .box2-2{
-    background-color: #ffc0cb;
+    /* background-color: #ffc0cb; */
     height: 400px;
     width: 30%;
     border: 2px dashed;
+    text-align: center;
+    color: black;
+    font-size: 2em;
+    font-family: 'Whitney', sans-serif;
 }
 
 .box-background3{
